Add credit and update readme

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                     </div>
                     <div class="fb-like" data-action="like" data-href="https://www.facebook.com/playagar.io" data-layout="button" data-share="true"
                         data-show-faces="true" style="float: right; margin-top: 30px;"></div>
-                    <!--<div style="margin-left: 55px">
-                        <a href="https://github.com/FantasyIsBae/Client">Github</a>
-                    </div>-->
+                    <<div style="margin-left: 55px">
+                        <a href="https://github.com/Fan7asy/Client">Github</a>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" id="nick" maxlength="15" style="align: center;" placeholder="Nick">
+                    <input class="form-control" id="nick" maxlength="15" placeholder="Nick">
                     <br clear="both">
                 </div>
 
@@ -68,7 +68,7 @@
         </div>
     </div>
     <form>
-        <input id="chat_textbox" maxlength="200" placeholder="Press Enter to chat!" type="text">
+        <input id="chat_textbox" maxlength="200" placeholder="Press enter to chat" type="text">
     </form>
 </body>
 
