Add credit and update readme

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                     <div>
                         <h1 style="text-align: center;">Client</h1>
                     </div>
-                    <div class="fb-like" data-action="like" data-href="https://www.facebook.com/playagar.io" data-layout="button" data-share="true"
-                        data-show-faces="true" style="float: right; margin-top: 30px;"></div>
-                    <<div style="margin-left: 55px">
+                    <div style="margin-left: 55px">
                         <a href="https://github.com/Fan7asy/Client">Github</a>
                     </div>
                 </div>
