--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                     <div>
                         <h1 style="text-align: center;">Client</h1>
                     </div>
-                    <div style="margin-left: 55px">
-                        <a href="https://github.com/Fan7asy/Client">Github</a>
-                    </div>
+
                 </div>
                 <div class="form-group">
                     <input class="form-control" id="nick" maxlength="15" placeholder="Nick">
@@ -54,6 +52,10 @@
                         <label><input id="csmooth" onchange="setSmooth($(this).is(':checked'));" type="checkbox"> Low Lag</label>
                         <label><input id="cacid" onchange="setAcid($(this).is(':checked'));" type="checkbox"> No Grid</label>
                     </div>
+                </div>
+                
+                <div style="position: relative;text-align: center;padding:20px;">
+                    <a href="https://github.com/Fan7asy/Client">Github Repo</a>
                 </div>
             </form>
         </div>
