--- a/index.html
+++ b/index.html
@@ -3,25 +3,18 @@
 <head>
     <title>Client</title>
     <canvas height="600" id="canvas" width="800"></canvas>
+
     <link id="fav" rel="icon" type="image/png" href="./icon.png" />
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0-rc.2/themes/smoothness/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="./css/Bootstrap.css"></link>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="./css/csshake.min.css">
-    <link rel="stylesheet" href="css/swal.css">
+
+    <script src="./js/jscolor.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.css" />
-        <script src="https://code.jquery.com/ui/1.12.0-rc.2/jquery-ui.min.js"></script>
-    <script src="js/swal.js"></script>
-    <script src="./js/main.js"></script>
 </head>
 
 <body>
@@ -29,24 +22,64 @@
 
     <div id="overlays" style="background-color: rgba(0, 0, 0, 0.4); position: absolute; left: 0; right: 0; top: 0; bottom: 0; z-index: 200;font-family: Orbitron;">
 
-        <div id="helloDialog">
+        <div id="main">
 
             <form role="form">
                 <div class="form-group">
                     <div style="float: left; margin-left: 20px;">
-                        <h2 style="font-family: 'Orbitron', sans-serif;font-size: 45px;color: orange;" id="titleh">Client</h2>
+                        <h2 style="font-family: 'Orbitron', sans-serif;font-size: 45px;color: orange;" class="shake-slow shake-constant" id="titleh">Client</h2>
                     </div>
                     <br clear="both">
+
+                    <form role="form">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" class="active">
+                                <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a>
+                            </li>
+
+                            <li role="presentation">
+                                <a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a>
+                            </li>
+
+                            <li role="presentation">
+                                <a href="#theming" aria-controls="theming" role="tab" data-toggle="tab">Themes</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div role="tabpanel" class="tab-pane" id="home">
+                            </div>
+                            <div role="tabpanel" class="tab-pane fade settings" id="settings">
+                                <hr>
+                                <div class="zoomSpeed"></div>
+                                <div class="container">
+                                    <div class="settingsRow">
+                                        <span id="animationTxt">Animation Delay 120</span><br><br>
+                                        <label></label><input type="range" id="delay" min="120" max="300"></label>
+                                        <br><br>
+                                        <div style="    position: relative;">
+                                            <label><input type="checkbox" name="sectors" id="sectors"> Sectors &nbsp</label>
+                                            <label><input type="checkbox" name="borders" id="borders"> Borders &nbsp</label>                                            <br><br>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div role="tabpanel" class="tab-pane fade" id="theming">
+                                <label>Background Colour &nbsp</label><br>
+                                <input class="jscolor" id="bgColour" value="222222"><br>
+                                <label>Border Colour &nbsp</label><br>
+                                <input class="jscolor" id="borderColour" value="FFA500"><br>
+                                <label>Sector Colour &nbsp</label><br>
+                                <input class="jscolor" id="sectorColour" value="1A1A1A"><br>
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <div class="form-group">
                     <input class="form-control" id="nick" maxlength="15" placeholder="Nick">
-
+                    <input class="form-control" id="skinUrl" placeholder="SkinUrl (https://i.imgur.com/........)">
                 </div>
                 <br>
                 <div class="form-group">
-                    <div>
-                        <br>
-                    </div>
                     <button class="shake-constant btn btn-play btn-primary btn-needs-server" style="background-color: orange;" id="playBtn" onclick="setNick(document.getElementById('nick').value); return false;"
                         type="submit">Join</button>
                     <button class="btn btn-warning btn-watch btn-needs-server" style="background-color: orange;" id="watchBtn" onclick="watch(); return false;">Watch</button>
@@ -55,8 +88,6 @@
                 </div>
             </form>
 
-
-            <hr>
             <p>
                 An open-source client made by <a href="https://github.com/Fan7asy" target="_blank">Fan7asy</a>
             </p>
