--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
     <link rel="stylesheet" href="./css/Bootstrap.css"></link>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="./css/csshake.min.css">
-
     <script src="./js/jscolor.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="./js/main.js"></script>
 </head>
 
 <body>
-
 
     <div id="overlays" style="background-color: rgba(0, 0, 0, 0.4); position: absolute; left: 0; right: 0; top: 0; bottom: 0; z-index: 200;font-family: Orbitron;">
 
