Added new menu "Developers"

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                             <li role="presentation">
                                 <a href="#theming" aria-controls="theming" role="tab" data-toggle="tab">Themes</a>
                             </li>
+                            <li role="presentation">
+                                <a href="#developers" aria-controls="developers" role="tab" data-toggle="tab">Developers</a>
+                            </li>
                         </ul>
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane" id="home">
@@ -71,6 +74,16 @@
                                 <input class="jscolor" id="sectorColour" value="1A1A1A"><br>
                             </div>
                         </div>
+                                <div role="tabpanel" class="tab-pane fade" id="developers">
+                                    <div class="yt-container" onclick="window.open('hhttps://github.com/Fan7asy')">
+                            <img src="https://avatars3.githubusercontent.com/u/21162678?v=4&s=400" class="yt-img">
+                            <h2 class="txt">Marl</h2>
+                            <h3 class="h3-txt">Developer</h3>
+                        </div>
+                                         </div>
+                                    </div>
+                                </div>
+                            </div>
                     </form>
                 </div>
                 <div class="form-group">
@@ -87,9 +100,9 @@
                 </div>
             </form>
 
-            <p>
-                An open-source client made by <a href="https://github.com/Fan7asy" target="_blank">Fan7asy</a>
-            </p>
+           // <p>
+               // An open-source client made by <a href="https://github.com/Fan7asy" target="_blank">Fan7asy</a>
+            //</p>
 
         </div>
 
